allow all words in table to break on small screens with TableSaw This fixes a bug where a the TableSaw small screen layout wouldn't work properly if there were very long column headers or long text in a <td> that wasn't wrapped in <a>.

--- a/app/assets/stylesheets/scrapers.css.scss
+++ b/app/assets/stylesheets/scrapers.css.scss
@@ -49,19 +49,10 @@
   // with TableSaw
   .tablesaw-enhanced & .tablesaw > tbody > tr > td {
     white-space: normal;
+    word-break: break-word;
 
     @media (min-width: $grid-float-breakpoint) {
       white-space: nowrap;
-    }
-  }
-}
-
-.tablesaw-cell-content {
-  a {
-    word-wrap: break-word;
-
-    @media (min-width: $grid-float-breakpoint) {
-      word-wrap: inherit;
     }
   }
 }
